--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -17,5 +17,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+
+    implementation 'dev.nextftc:control:1.0.0'
+    implementation 'dev.nextftc:bindings:1.0.1'
 }
 
